--- a/oppgave_1/backend/package.json
+++ b/oppgave_1/backend/package.json
@@ -7,6 +7,7 @@
 	},
 	"dependencies": {
 		"@hono/node-server": "^1.12.1",
+		"@prisma/client": "^5.22.0",
 		"@t3-oss/env-core": "^0.11.1",
 		"better-sqlite3": "^11.3.0",
 		"dotenv": "^16.4.5",
@@ -19,6 +20,7 @@
 		"@typescript-eslint/eslint-plugin": "^8.2.0",
 		"@typescript-eslint/parser": "^8.2.0",
 		"eslint": "^9.9.0",
+		"prisma": "^5.22.0",
 		"tsx": "^4.17.0"
 	}
 }
