--- a/oppgave_2/backend/package.json
+++ b/oppgave_2/backend/package.json
@@ -7,10 +7,12 @@
 	},
 	"dependencies": {
 		"@hono/node-server": "^1.12.1",
+		"@prisma/client": "^6.0.0",
 		"@t3-oss/env-core": "^0.11.1",
 		"better-sqlite3": "^11.3.0",
 		"dotenv": "^16.4.5",
 		"hono": "^4.5.7",
+		"prisma": "^6.0.0",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
