prisma added to package.json

--- a/oppgave_2/backend/package.json
+++ b/oppgave_2/backend/package.json
@@ -6,25 +6,28 @@
 		"db:setup": "tsx src/db/index.ts"
 	},
 	"prisma": {
-  		"seed": "node prisma/seed.js"
+		"seed": "node prisma/seed.js"
 	},
 	"dependencies": {
 		"@hono/node-server": "^1.12.1",
-		"@prisma/client": "^6.0.0",
 		"@t3-oss/env-core": "^0.11.1",
 		"better-sqlite3": "^11.3.0",
 		"dotenv": "^16.4.5",
 		"hono": "^4.5.7",
-		"prisma": "^6.0.0",
+		"save-dev": "^0.0.1-security",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@antfu/eslint-config": "^2.27.0",
+		"@prisma/client": "^6.0.0",
 		"@types/better-sqlite3": "^7.6.11",
 		"@types/node": "^22.5.0",
 		"@typescript-eslint/eslint-plugin": "^8.2.0",
 		"@typescript-eslint/parser": "^8.2.0",
 		"eslint": "^9.9.0",
+		"install": "^0.13.0",
+		"npm": "^10.9.1",
+		"prisma": "^6.0.0",
 		"tsx": "^4.17.0"
 	}
 }
