--- a/oppgave_2/backend/package.json
+++ b/oppgave_2/backend/package.json
@@ -28,6 +28,7 @@
 		"install": "^0.13.0",
 		"npm": "^10.9.1",
 		"prisma": "^6.0.0",
-		"tsx": "^4.17.0"
+		"tsx": "^4.17.0",
+		"uuid": "^11.0.3"
 	}
 }
