--- a/oppgave_2/frontend/package.json
+++ b/oppgave_2/frontend/package.json
@@ -34,10 +34,12 @@
 		"eslint": "^8.6.0",
 		"eslint-config-next": "14.2.13",
 		"eslint-plugin-react-refresh": "^0.4.13",
+		"file-saver": "^2.0.5",
 		"postcss": "^8.4.47",
 		"tailwindcss": "^3.4.14",
 		"typescript": "^5.6.3",
 		"vite": "^5.4.9",
-		"vite-tsconfig-paths": "^5.0.1"
+		"vite-tsconfig-paths": "^5.0.1",
+		"xlsx": "^0.18.5"
 	}
 }
