--- a/oppgave_1/frontend/package.json
+++ b/oppgave_1/frontend/package.json
@@ -14,11 +14,18 @@
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
+		"@tiptap/pm": "^2.10.3",
+		"@tiptap/react": "^2.10.3",
+		"@tiptap/starter-kit": "^2.10.3",
 		"date-fns": "^4.1.0",
+		"html-to-react": "^1.7.0",
 		"lucide-react": "^0.453.0",
 		"next": "14.2.13",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-markdown": "^9.0.1",
+		"react-render-markup": "^3.6.3",
+		"remark-html": "^16.0.1",
 		"tailwindcss": "^3.4.14",
 		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.23.8"
